--- a/templates/index.html
+++ b/templates/index.html
@@ -5,54 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            text-align: center;
-        }
-    
-        img {
-            width: 300px;
-            height: 300px;
-            margin-top: 20px;
-            transition: 200ms;
-            margin: 1.66%;
-            float: left;
-    
-        }
-    
-        img:hover {
-            opacity: 1;
-            box-shadow: 0px 0px 10px black;
-            transform: scale(1.1);
-        }
-    
-        .container {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-    
-        p {
-            font-family: 'Amatic SC', cursive;
-            margin-left: 1.66%;
-            font-size: 40px;
-            border-bottom: solid 2px #f1f1f1;
-            width: 30%;
-            padding-bottom: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', 'styles.css') }}">
 
     <title>Memes</title>
 </head>
-<body>
-    
-</body>
-</html>
-
 
 <body>
     
@@ -75,3 +31,4 @@
     </div>
 
 </body>
+</html>
