--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='header.css') }}">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Memes</title>
+    <title>Media</title>
 
 </head>
 
