--- a/templates/index.html
+++ b/templates/index.html
@@ -54,15 +54,15 @@
         <div class="top_header">
             <section>
                 <span><i class="fa fa-map-marker"></i></span>
-                <span>Sri Lanka</span>
+                <span>{{ wblocation }}</span>
             </section>
             <section onclick="showDiscordInfo()">
                 <span><i class="fa fa-phone"></i></span>
-                <span>ZeaCeR#5641</span>
+                <span>{{ wbcontact }}</span>
             </section>
             <section>
                 <span><i class="fa fa-envelope"></i></span>
-                <span>hirusha@hirusha.xyz</span>
+                <span>{{ wbemail }}</span>
             </section>
         </div>
         <span class="border-shape"></span>
